[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/bugged_game/knife_throw.gd" type="Script" id=1]
[ext_resource path="res://images/knife_pixel_transparent.png" type="Texture" id=2]

[node name="knife_throw" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
rotation = 3.14159
texture = ExtResource( 2 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -25.6995, -4.6085, -12.238, -2.68542, -6.64357, -8.27981, -6.64357, -3.73438, -4.19603, -3.55955, -3.32191, -4.95815, 19.4053, -5.3078, 23.6011, -4.25885, 30.9437, 1.68519, 22.5521, 4.30756, -6.64357, 4.48238, -6.64357, 8.1537, -8.74147, 8.67817, -11.8883, 4.83204, -20.2799, 5.18168, -28.147, 3.60826, -29.5456, -0.0630569, -28.8463, -3.03508 )

[node name="lifetime" type="Timer" parent="."]
wait_time = 0.5

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0.961534, 0 )
scale = Vector2( 3.08915, 1 )
[connection signal="area_entered" from="." to="." method="_on_knife_throw_area_entered"]
[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]
[connection signal="viewport_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
